Nov 1 Testing/Production

--- a/src/main/webapp/app/entities/contacts/contacts-add.html
+++ b/src/main/webapp/app/entities/contacts/contacts-add.html
@@ -18,10 +18,8 @@
                 and Add
             </button>
 
-            <button type="button" ui-sref="contacts.project-permission" class="btn btn-xs btn btn-primary">Project
-                Permissions
-            </button>
-  
+            <button type="button" ui-sref="contacts.project-permission({id:savedID})" class="btn btn-xs btn btn-primary">Project Permissions</button>
+
             <button type="submit" onclick="window.history.back()" class="btn btn-danger btn-xs">Close</button>
         </div>
     </div>
