--- a/src/main/webapp/app/entities/contacts/contacts.html
+++ b/src/main/webapp/app/entities/contacts/contacts.html
@@ -78,11 +78,11 @@
                 <td class="extra-small">{{contacts.phoneMobile}}</td>
 
                 <td class="extra-small">
-                    <a ui-sref="lookups-detail({id:contacts.type.id})">{{contacts.type.textValue}}</a>
+                    <a ui-sref="lookups-detail({id:contacts.typeId})">{{contacts.typeValue}}</a>
                 </td>
 
                 <td class="extra-small">
-                    <a ui-sref="contacts-detail({id:contacts.companyContact.id})">{{contacts.companyContact.fullName}}</a>
+                    <a ui-sref="contacts-detail({id:contacts.companyContactId})">{{contacts.companyContactFullName}}</a>
                 </td>
                 <td class="text-right extra-small">
                     <div class="btn-group flex-btn-group-container">
