--- a/src/main/webapp/app/entities/contacts/simpleModal.html
+++ b/src/main/webapp/app/entities/contacts/simpleModal.html
@@ -288,13 +288,9 @@
 
 								<td class="extra-small">{{contacts.phoneMobile}}</td>
 
-								<td class="extra-small"><a
-									ui-sref="lookups-detail({id:contacts.type.id})">{{contacts.type.textValue}}</a>
-								</td>
+								<td class="extra-small">{{contacts.typeValue}}</td>
 
-								<td class="extra-small"><a
-									ui-sref="contacts-detail({id:contacts.companyContact.id})">{{contacts.companyContact.fullName}}</a>
-								</td>
+								<td class="extra-small">{{contacts.companyContactFullName}}</td>
 
 							</tr>
 						</tbody>
