--- a/src/main/webapp/app/entities/projects/projects-add.html
+++ b/src/main/webapp/app/entities/projects/projects-add.html
@@ -110,7 +110,7 @@
 		<label class="col-md-1 control-label small" for="field_imageLocation">Image
 			Location</label>
 		<div class="col-sm-2">
-		
+
 
 				<!-- <span class="input-group-btn">
 					<button type="button" ui-sref="storage-disk.new"
@@ -123,9 +123,9 @@
 					<option value=""></option>
 				</select> -->
 				<input id="field_imageLocation" name="textinput" type="text"
-					ng-model="vm.projects.imageLocation.name"
+					ng-model="vm.projects.imageLocation"
 					class="form-control input-sm" readonly>
-		
+
 
 		</div>
 
@@ -1049,7 +1049,7 @@
 			<th></th>
 		</tr>
 		<tr data-ng-repeat="choice in talents">
-		
+
 			<td class="col-xs-1">
 
 				<div class="input-group">
