--- a/src/main/webapp/app/entities/projects/projects.html
+++ b/src/main/webapp/app/entities/projects/projects.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary btn-sm" ui-sref="projects.new">
+                <button class="btn btn-primary btn-sm" ui-sref="projects.add">
                     <span class="glyphicon glyphicon-plus"></span>
                     <span class="hidden-xs" translate="smartLpcApp.projects.home.createLabel">
                         Create new Projects
