--- a/src/main/webapp/app/entities/work-order/work-order-audit.html
+++ b/src/main/webapp/app/entities/work-order/work-order-audit.html
@@ -13,7 +13,7 @@
 						new WorkOrder </span>
 				</button>
 			</div>
-			<div class="col-xs-8 no-padding-right">
+			<!--<div class="col-xs-8 no-padding-right">
 				<form name="searchForm" class="form-inline">
 					<div class="input-group pull-right">
 						<input type="text" class="form-control input-sm"
@@ -31,7 +31,7 @@
 						</span>
 					</div>
 				</form>
-			</div>
+			</div>-->
 		</div>
 	</div>
 
