--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -241,6 +241,7 @@ Latest compiled and minified JavaScript
 	<script src="app/entities/work-order/project-info-router.controller.js"></script>
 
 	<script src="app/entities/work-order/work-order-audit.controller.js"></script>
+	<script src="app/entities/work-order/work-order-included-comp.controller.js"></script>
 	<script src="app/entities/storage-servers/storage-servers.state.js"></script>
 	<script src="app/entities/storage-servers/storage-servers.service.js"></script>
 	<script
