--- a/src/main/webapp/app/entities/projects/update-albums.html
+++ b/src/main/webapp/app/entities/projects/update-albums.html
@@ -27,7 +27,7 @@
                 <div class="btn-group flex-btn-group-container">
 
                     <button type="button" class="btn btn-primary btn-xs" ng-click="vm.edit(tags)">
-                        <span class="glyphicon glyphicon-save"></span>
+                        <span class="glyphicon glyphicon-check"></span>
                     </button>
                     <button type="button"
                             class="btn btn-danger btn-xs">
