--- a/src/main/webapp/app/entities/work-order/work-order-included-comp.html
+++ b/src/main/webapp/app/entities/work-order/work-order-included-comp.html
@@ -11,7 +11,7 @@
                     </span>
                 </button>
             </div>
-            <div class="col-xs-8 no-padding-right">
+            <!--<div class="col-xs-8 no-padding-right">
                 <form name="searchForm" class="form-inline">
                     <div class="input-group pull-right">
                         <input type="text" class="form-control input-sm" ng-model="vm.searchQuery" id="searchQuery"
@@ -28,7 +28,7 @@
                         </span>
                     </div>
                 </form>
-            </div>
+            </div>-->
         </div>
     </div>
     <br/>
@@ -67,50 +67,64 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="workOrder in vm.workOrders track by workOrder.id">
-                <td class="extra-small"><a ui-sref="work-order-detail({id:workOrder.id})">{{workOrder.id}}</a></td>
-                <td class="extra-small">{{workOrder.requestDate | date:'mediumDate'}}</td>
-                <td class="extra-small">{{workOrder.requestDescription}}</td>
+            <tr ng-repeat="workOrder in vm.workOrders.slice(((currentPage-1)*itemsPerPage), ((currentPage)*itemsPerPage))"
+                ng-class="{
+                verify: workOrder.color == 'Orange',
+                notstarted: workOrder.color == 'Yellow',
+                rush: workOrder.color == 'Red',
+                kickback: workOrder.color == 'Blue',
+                owners: workOrder.color == 'LightBlue'
+                }">
 
-                <td class="extra-small">{{workOrder.poRecord}}</td>
-                <td class="extra-small">{{workOrder.invoiced}}</td>
-                <td class="extra-small">{{workOrder.durationOfService}}</td>
 
+                <td class="col-xs-1 extra-small">
+                    <div ng-if="workOrder.id != HIDE">
+                        <a ui-sref="work-order-detail({id:workOrder.id})">{{workOrder.id}}</a>
+                    </div>
+                </td>
+                <td class="col-xs-2 extra-small">
+                    <div ng-if="workOrder.id == HIDE">
+                        <strong>{{workOrder.project_name}}</strong>
+                    </div>
+                    <div ng-if="workOrder.id != HIDE">
+                        {{workOrder.project_name}}
+                    </div>
+                </td>
+                <td class="col-xs-1 extra-small">
+                    <div ng-if="workOrder.id != HIDE">
+                        {{workOrder.po}}
+                    </div>
+                </td>
+                <td class="col-xs-1 extra-small">{{workOrder.date}}</td>
+                <td class="extra-small">{{workOrder.type}}</td>
+                <td class="extra-small">{{workOrder.workDesc}}</td>
+                <td class="col-xs-1 extra-small">{{workOrder.status}}</td>
+                <td class="extra-small">{{workOrder.time}}</td>
+                <td class="extra-small">{{workOrder.assignedTo}}</td>
 
-                <td class="extra-small">
-                    <a ui-sref="lookups-detail({id:workOrder.type.id})">{{workOrder.type.textValue}}</a>
-                </td>
-                <td class="extra-small">
-                    <a ui-sref="lookups-detail({id:workOrder.status.id})">{{workOrder.status.textValue}}</a>
-                </td>
-
-                <td class="extra-small">
-                    <a ui-sref="projects-detail({id:workOrder.project.id})">{{workOrder.project.name}}</a>
-                </td>
-                <td  class="extra-small">
-                    {{workOrder.assignedToUser.firstName}}
-                </td>
 
                 <td class="text-right extra-small">
-                    <div class="btn-group flex-btn-group-container">
-                        <button type="submit"
-                                ui-sref="work-order-detail({id:workOrder.id})"
-                                class="btn btn-info btn-sm">
-                            <span class="glyphicon glyphicon-eye-open"></span>
-                            <span class="hidden-xs hidden-sm" translate="entity.action.view"></span>
-                        </button>
-                        <button type="submit"
-                                ui-sref="work-order.edit({id:workOrder.id})"
-                                class="btn btn-primary btn-sm">
-                            <span class="glyphicon glyphicon-pencil"></span>
-                            <span class="hidden-xs hidden-sm" translate="entity.action.edit"></span>
-                        </button>
-                        <button type="submit"
-                                ui-sref="work-order.delete({id:workOrder.id})"
-                                class="btn btn-danger btn-sm">
-                            <span class="glyphicon glyphicon-remove-circle"></span>
-                            <span class="hidden-xs hidden-sm" translate="entity.action.delete"></span>
-                        </button>
+                    <div ng-if="workOrder.id != HIDE">
+
+
+                        <div class="btn-group flex-btn-group-container">
+                            <button type="submit"
+                                    ui-sref="work-order-detail({id:workOrder.id})"
+                                    class="btn btn-info btn-sm">
+                                <span class="glyphicon glyphicon-eye-open"></span>
+                            </button>
+                            <button type="submit"
+                                    ui-sref="work-order.edit({id:workOrder.id})"
+                                    class="btn btn-primary btn-sm">
+                                <span class="glyphicon glyphicon-pencil"></span>
+
+                            </button>
+                            <button type="submit"
+                                    ui-sref="work-order.delete({id:workOrder.id})"
+                                    class="btn btn-danger btn-sm">
+                                <span class="glyphicon glyphicon-remove-circle"></span>
+                            </button>
+                        </div>
                     </div>
                 </td>
             </tr>
@@ -118,8 +132,10 @@
         </table>
     </div>
     <div class="text-center">
-        <jhi-item-count page="vm.page" total="vm.queryCount"></jhi-item-count>
-        <uib-pagination class="pagination-sm" total-items="vm.totalItems" ng-model="vm.page"
-                        ng-change="vm.transition()"></uib-pagination>
+
+        <uib-pagination class="pagination-sm" total-items="totalItems" ng-model="currentPage" max-size="maxSize"
+                        boundary-links="true" rotate="false" num-pages="numPages"
+                        items-per-page="itemsPerPage"></uib-pagination>
+        <pre>Page: {{currentPage}} / {{numPages}}</pre>
     </div>
 </div>
